# cloak

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.pt-br.md
docs/: README.md  architecture.md  configuration.md  development.md  security_best_practices_report.md  statusline.md  troubleshooting.md  usage.md
docs/pt-br/: README.md  arquitetura.md  configuracao.md  desenvolvimento.md  security_best_practices_report.md  statusline.md  troubleshooting.md  uso.md
resources/: mcp_registry.toml
src/: account.rs  cli.rs  config.rs  doctor.rs  exec.rs  main.rs  mcp.rs  mcp_registry.rs  paths.rs  profile.rs
tests/: exec_integration.rs
