[package]
name = "cloak"
version = "0.1.0"
edition = "2021"
description = "LLM CLI profile manager by directory"
license = "Apache-2.0"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
color-eyre = "0.6"
owo-colors = "4"
which = "8"

[dev-dependencies]
tempfile = "3"
